--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
 	"main": "bot.js",
 	"author": "@Mars#2654",
 	"dependencies": {
+		"common-tags": "^1.8.0",
+		"dice-expression-evaluator": "^0.1.2",
 		"discord-graf": "^0.15.4",
 		"discord.js": "^11.4.2",
-		"winston": "^3.1.0"
+		"universal-analytics": "^0.4.20",
+		"winston": "^3.1.0",
+		"yargs": "^12.0.4"
 	}
 }
